[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chia_py_rpc"
version = "0.0.5"
authors = [
  { name="L4bb3rs", email="king@the300.net" },
]
description = "Chia-Py-RPC is a Python library that provides a convenient way to interact with the Chia blockchain using the Chia RPC (Remote Procedure Call) protocol."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/L4bb3rs/Chia-Py-RPC"
"Bug Tracker" = "https://github.com/L4bb3rs/Chia-Py-RPC"